Add branch-alias and update PHP requirements in composer.json

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,10 @@
     "scripts": {
         "test": "vendor/bin/phpunit ./tests",
         "analysis": "phpstan"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-main": "0.8.x-dev"
+        }
     }
 }
